tests/ui/feature-gates/feature-gate-unsized_tuple_coercion.stderr
error[E0308]: mismatched types
  --> $DIR/feature-gate-unsized_tuple_coercion.rs:2:28
   |
LL |     let _ : &(dyn Send,) = &((),);
   |             ------------   ^^^^^^ expected `&(dyn Send,)`, found `&((),)`
   |             |
   |             expected due to this
   |
   = note: expected reference `&(dyn Send,)`
              found reference `&((),)`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
