tests/ui/feature-gates/feature-gate-unsized_tuple_coercion.rs
fn main() {
    let _ : &(dyn Send,) = &((),);
    //~^ ERROR mismatched types [E0308]
}
